@@ -1,19 +1,21 @@
 package com.example.keycloak.multitenant.service;
 
-import com.auth0.jwt.JWT;
-import com.auth0.jwt.interfaces.DecodedJWT;
 import com.example.keycloak.multitenant.config.KeycloakProperties;
 import com.example.keycloak.multitenant.model.LoginResponse;
 import com.example.keycloak.multitenant.service.keycloak.KeycloakOidcClient;
-import com.fasterxml.jackson.databind.JsonNode;
+import com.example.keycloak.multitenant.service.utils.KeycloakConfigService;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.security.Keys;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.security.KeyPair;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -37,7 +39,9 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-
+/**
+ * Clase de test para {@link LoginService}.
+ */
 class LoginServiceTest {
 
     @Mock
@@ -45,6 +49,9 @@ class LoginServiceTest {
 
     @Mock
     private KeycloakProperties keycloakProperties;
+
+    @Mock
+    private KeycloakConfigService keycloakConfigService;
 
     @InjectMocks
     private LoginService loginService;
@@ -60,12 +67,10 @@ class LoginServiceTest {
     private Map<String, String> realmMapping;
     private Map<String, String> clientSecrets;
     private String authServerUrl;
-    private String issuerUrl;
-    private List<String> mockRealmRoles;
-    private Map<String, List<String>> mockClientRoles;
     private String mockAccessToken;
     private String mockIdToken;
     private String keycloakTokenResponse;
+    private KeyPair keyPair;
 
 
     @BeforeEach
@@ -84,13 +89,29 @@ class LoginServiceTest {
         clientSecrets.put(client, clientSecret);
 
         authServerUrl = "http://localhost:8080";
-        issuerUrl = authServerUrl + "/realms/" + keycloakRealm;
 
-        mockRealmRoles = List.of("app_users", "offline_access");
-        mockClientRoles = new HashMap<>();
-        mockClientRoles.put(client, List.of("user_app"));
-        mockAccessToken = createMockJwt(username, "test@example.com", "Test User", mockRealmRoles, mockClientRoles, issuerUrl);
-        mockIdToken = createMockJwt(username, "test@example.com", "Test User", Collections.emptyList(), Collections.emptyMap(), issuerUrl);
+        keyPair = Keys.keyPairFor(SignatureAlgorithm.RS256);
+
+        mockAccessToken = Jwts.builder()
+                .setSubject("54321")
+                .setIssuedAt(new Date())
+                .setExpiration(new Date(System.currentTimeMillis() + 300000))
+                .claim("email", "test@example.com")
+                .claim("name", "Test User")
+                .claim("preferred_username", username)
+                .claim("realm_access", Map.of("roles", List.of("app_users", "offline_access")))
+                .claim("resource_access", Map.of(client, Map.of("roles", List.of("user_app"))))
+                .signWith(keyPair.getPrivate(), SignatureAlgorithm.RS256)
+                .compact();
+
+        mockIdToken = Jwts.builder()
+                .setSubject("54321")
+                .setIssuedAt(new Date())
+                .setExpiration(new Date(System.currentTimeMillis() + 300000))
+                .claim("email", "test@example.com")
+                .signWith(keyPair.getPrivate(), SignatureAlgorithm.RS256)
+                .compact();
+
         keycloakTokenResponse = "{" +
                 "\"access_token\":\"" + mockAccessToken + "\"," +
                 "\"id_token\":\"" + mockIdToken + "\"," +
@@ -105,45 +126,9 @@ class LoginServiceTest {
         when(keycloakOidcClient.createBasicAuthHeaders(anyString(), anyString())).thenReturn(new HttpHeaders());
     }
 
-    private String createMockJwt(String username, String email, String fullName, List<String> realmRoles, Map<String, List<String>> clientRoles, String issuer) {
-        try {
-            Map<String, Object> headerClaims = new HashMap<>();
-            headerClaims.put("alg", "HS256");
-            headerClaims.put("typ", "JWT");
-
-            Map<String, Object> payloadClaims = new HashMap<>();
-            payloadClaims.put("sub", "54321");
-            payloadClaims.put("name", fullName);
-            payloadClaims.put("preferred_username", username);
-            payloadClaims.put("email", email);
-            payloadClaims.put("iss", issuer);
-
-            Map<String, Object> realmAccessClaim = new HashMap<>();
-            realmAccessClaim.put("roles", realmRoles);
-            payloadClaims.put("realm_access", realmAccessClaim);
-
-            Map<String, Object> resourceAccessClaim = new HashMap<>();
-            clientRoles.forEach((clientId, rolesList) -> {
-                Map<String, Object> clientAccess = new HashMap<>();
-                clientAccess.put("roles", rolesList);
-                resourceAccessClaim.put(clientId, clientAccess);
-            });
-            payloadClaims.put("resource_access", resourceAccessClaim);
-
-            String header = objectMapper.writeValueAsString(headerClaims);
-            String payload = objectMapper.writeValueAsString(payloadClaims);
-
-            String encodedHeader = java.util.Base64.getUrlEncoder().withoutPadding().encodeToString(header.getBytes());
-            String encodedPayload = java.util.Base64.getUrlEncoder().withoutPadding().encodeToString(payload.getBytes());
-
-            return encodedHeader + "." + encodedPayload + ".mocksignature";
-        } catch (Exception e) {
-            throw new RuntimeException("Error creating mock JWT", e);
-        }
-    }
-
     @Test
-    void testAuthenticateSuccess() throws Exception {
+    @DisplayName("Debería autenticar al usuario y decodificar el token correctamente")
+    void testAuthenticateSuccess() {
         when(keycloakOidcClient.postRequest(
                 eq(keycloakRealm),
                 eq("token"),
@@ -151,6 +136,8 @@ class LoginServiceTest {
                 any(HttpHeaders.class),
                 eq(String.class)
         )).thenReturn(keycloakTokenResponse);
+
+        when(keycloakConfigService.getRealmPublicKey(realm)).thenReturn(keyPair.getPublic());
 
         LoginResponse response = loginService.authenticate(realm, client, username, password);
 
@@ -170,13 +157,17 @@ class LoginServiceTest {
         assertEquals(realm, response.getRealm());
         assertEquals(client, response.getClient());
         assertEquals(username, response.getPreferredUsername());
+        assertEquals("test@example.com", response.getEmail());
+        assertEquals("Test User", response.getFullName());
 
         verify(keycloakProperties, times(1)).getRealmMapping();
         verify(keycloakProperties, times(1)).getClientSecrets();
         verify(keycloakOidcClient, times(1)).postRequest(anyString(), anyString(), any(), any(), eq(String.class));
+        verify(keycloakConfigService, times(1)).getRealmPublicKey(realm);
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException si el tenant no es reconocido")
     void testAuthenticateTenantNotFound() {
         when(keycloakProperties.getRealmMapping()).thenReturn(new HashMap<>());
         ResponseStatusException exception = assertThrows(ResponseStatusException.class,
@@ -185,6 +176,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar IllegalArgumentException si el client secret no se encuentra")
     void authenticate_clientSecretIsNull_throwsIllegalArgumentException() {
         clientSecrets.remove(client);
         IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () ->
@@ -193,6 +185,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException cuando el cliente HTTP arroja un error")
     void authenticate_httpClientErrorException_throwsResponseStatusException() {
         HttpClientErrorException httpEx = HttpClientErrorException.create(HttpStatus.UNAUTHORIZED, "Unauthorized", new HttpHeaders(), null, StandardCharsets.UTF_8);
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
@@ -203,6 +196,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar una excepción para errores inesperados durante la autenticación")
     void authenticate_unexpectedException_throwsResponseStatusException() {
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
                 .thenThrow(new RuntimeException("Unexpected"));
@@ -212,6 +206,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException para respuestas de token inválidas")
     void authenticate_invalidTokenResponse_throwsResponseStatusException() {
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
                 .thenReturn("invalid-json");
@@ -223,6 +218,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería renovar el token correctamente")
     void testRefreshTokenSuccess() throws Exception {
         String oldRefreshToken = "old-token";
         String tokenJson = "{" +
@@ -250,6 +246,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException si el realm no es encontrado al refrescar el token")
     void refreshToken_realmNotFound() {
         when(keycloakProperties.getRealmMapping()).thenReturn(new HashMap<>());
         assertThrows(ResponseStatusException.class, () ->
@@ -257,6 +254,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar IllegalArgumentException si el client secret falta al refrescar el token")
     void refreshToken_clientSecretMissing() {
         clientSecrets.remove(client);
         assertThrows(IllegalArgumentException.class, () ->
@@ -264,6 +262,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar una excepción si ocurre un error inesperado al refrescar el token")
     void refreshToken_exceptionThrown() {
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
                 .thenThrow(new RuntimeException("Simulated error"));
@@ -273,6 +272,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException cuando el cliente HTTP arroja un error al refrescar el token")
     void refreshToken_httpClientErrorException_throwsResponseStatusException() {
         HttpClientErrorException httpEx = HttpClientErrorException.create(HttpStatus.UNAUTHORIZED, "Unauthorized", new HttpHeaders(), null, StandardCharsets.UTF_8);
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
@@ -283,6 +283,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar ResponseStatusException para respuestas de token inválidas al refrescar")
     void refreshToken_invalidTokenResponse_throwsResponseStatusException() {
         when(keycloakOidcClient.postRequest(anyString(), anyString(), any(), any(), eq(String.class)))
                 .thenReturn("invalid-json");
@@ -294,6 +295,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería revocar el token de refresco correctamente")
     void testRevokeRefreshToken() {
         String fullRefreshToken = "header.payload.signature";
 
@@ -326,6 +328,7 @@ class LoginServiceTest {
 
 
     @Test
+    @DisplayName("Debería lanzar una excepción si el realm no se encuentra al revocar el token")
     void revokeRefreshToken_realmNotFound() {
         when(keycloakProperties.getRealmMapping()).thenReturn(new HashMap<>());
         ResponseStatusException exception = assertThrows(ResponseStatusException.class, () ->
@@ -334,6 +337,7 @@ class LoginServiceTest {
     }
 
     @Test
+    @DisplayName("Debería lanzar una excepción si el client secret falta al revocar el token")
     void revokeRefreshToken_clientSecretMissing() {
         clientSecrets.remove(client);
         ResponseStatusException exception = assertThrows(ResponseStatusException.class, () ->
